--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ img{
     width: 100%;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 .section-contain{
     margin: 0 auto;
     padding: 0 20px;
@@ -295,6 +299,7 @@ background-color: var(--light-pink-color)
 }
 
 .testimonials-section .testimonials {
+    user-select: none;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -367,6 +372,112 @@ background-color: var(--light-pink-color)
 .gallery-section .gallery-items:hover .gallery-image{
     transform: scale(1.3);
 }
+
+ /* contact us section styling */
+
+  .contact-section{
+    background-color: var(--light-pink-color);
+    padding: 50px 0 100px;
+
+  }
+
+  .contact-section .section-contain{
+    display: flex;
+    gap: 48px;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .contact-section .contsct-info-list .contact-info{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin: 20px 0;
+  }
+  
+  .contact-section .contsct-info-list .contact-info i{
+    font-size: var(--font-size-m);
+  }
+
+    .contact-section .contact-form .form-input{
+        width: 100%;
+        height: 50px;
+        padding: 0 12px ;
+        outline: none;
+        margin-bottom: 16px;
+        background: var(--white-color);
+        border-radius: var(--border-radius-s);
+        border: 1px solid var(--medium-gray-color);
+    }
+
+        .contact-section .contact-form .form-input:focus{
+            border-color: var(--seconday-color);
+        }
+
+    .contact-section .contact-form textarea.form-input{
+        height: 100px;
+        padding: 12px;
+        resize: vertical;
+
+    }
+
+     .contact-section .contact-form{
+        max-width: 50%;
+     }
+
+    .contact-section .contact-form .submit-button{
+        padding: 10px 26px;
+        margin-top: 10px;
+        background: var(--primary-color);
+        color: var(--white-color);
+        font-size: var(--font-size-m);
+        border-radius: var(--border-radius-m);
+        font-weight: var(--font-weight-medium);
+        border: 1px solid var(--primary-color);
+        transition: 0.3s ease;
+    }
+
+       .contact-section .contact-form .submit-button:hover{
+        color: var(--primary-color);
+        background: transparent;
+       }
+
+       /* footer section styling */
+       .footer-section{
+        background: var(--dark-color);
+        padding: 20px 0;
+       }
+
+        .footer-section .section-contain{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+          .footer-section .social-link-list{
+            display: flex;
+            gap: 25px;
+          }
+
+          .footer-section .social-link-list .social-link{
+            font-size: var(--font-size-l);
+          }
+
+           .footer-section .social-link-list .social-link:hover,
+             .footer-section .policy-text .pilicy-link:hover
+           {
+            color: var(--seconday-color);
+           }
+
+           .footer-section .policy-text .seperator{
+            margin: 0 5px;
+            color: var(--white-color);
+           }
+
+       .footer-section :where(.copyRight-text, .social-link, .pilicy-link){
+        color: var(--white-color);
+        transition: 0.3 ease;
+       }
 /* responsive quary for 1024px */
 
 @media screen and (max-width: 1024px){
@@ -454,7 +565,8 @@ background-color: var(--light-pink-color)
     max-width: 270px;
     margin-right: 0;
 }
-.hero-section .hero-details :is(.subtitle, .description),.about-section .about-details{
+.hero-section .hero-details :is(.subtitle, .description),.about-section .about-details,
+ .contact-section .contact-form{
     max-width: 100%;
 }
 
@@ -494,8 +606,14 @@ background-color: var(--light-pink-color)
   .gallery-section .gallery-list .gallery-items{
         width: calc(100% / 2 - 30px);
   }
+
+    .contact-section .section-contain{
+        align-items: center;
+        flex-direction: column-reverse;
+    }
 }
 
+ 
   /* responsive quary for 640x */
 @media screen and (max-width: 640px){
     .menu-selection .menu-list{
@@ -514,13 +632,10 @@ background-color: var(--light-pink-color)
   .testimonials-section .swiper-slider-buttons{
     display: none;
   }
+
+  .footer-section .section-contain{
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 
-body {
-  overflow-y: scroll;
-  scrollbar-width: none; /* Firefox */
-}
-
-body::-webkit-scrollbar {
-  display: none; /* Chrome, Safari */
-}
